[bug3] - fixed: Horizontal scroll on scaling the image
Horizontal scroll on scaling the laptop image disabled

--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,7 @@
 body {
 	background-color: black;
 	font-family: 'Roboto', sans-serif;
+	overflow-x: hidden;
 }
 
 @media screen and (max-width: 1100px) {
